# litebike

./: .env  .env.example  AGENTS.md  Cargo.toml  DEVELOPMENT.md  ENHANCEMENTS_2026_02_25.md  KILO_ADVANTAGES_FOR_MODELMUX.md  MODELMUX_CLI_REFERENCE.md  MODELMUX_IMPLEMENTATION_SUMMARY.md  MODELMUX_README.md  PRO  PRODUCTION_STATUS.md  README.md  dev-tmux.sh  dsel-demo.sh  nohup.out  ollama  run-dsel-demo.sh  test-copilot.sh
.cargo/: config.toml
.codex/environments/: environment.toml
conductor/: COMPLETION_REPORT_2026_03_04.md  IMPLEMENTATION_PLAN.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/cc_store_dsel_quota_20260226/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  metadata.json  plan.md  spec.md
conductor/tracks/litebike-modelmux-superpath_20260225/: agent_guidance_quota_drainer.md  cc_switch_env_parity_inventory.md  metadata.json  plan.md  spec.md
conductor/tracks/litebike_creeping_vine_20260226/: metadata.json  plan.md  spec.md
conductor/tracks/litebike_edge_companion_launch_20260308/: plan.md  spec.md
conductor/tracks/mcmo_control_plane_gui_20260226/: metadata.json  plan.md  spec.md
conductor/tracks/nway-api-conversion-20260304/: IMPLEMENTATION_SUMMARY.md  metadata.json  plan.md
conductor/tracks/ollama-api-catalog-20260304/: catalog.md  metadata.json
conductor/tracks/ollama-emulator-copilot-20260304/: BASE_ENV_EXECUTION.md  COURSE_CORRECTION.md  DRY_YAGNI_ARCHITECTURE.md  IMPLEMENTATION_RECORD.md  IMPLEMENTATION_SUMMARY.md  LIVE_DEMO_COURSE_CORRECTION.md  MODEL_MUXER_DEMO.md  OPENAI_TARGETS_FIRST.md  OPENCODE_ENV_MAPPINGS.md  PROVIDER_RULES.md  TDD_TESTS.md  UNIFIED_IMPLEMENTATION.md  api-env-lookup-table.md  api-host-recognition.md  demo-transcript.md  live_demo.sh  metadata.json  plan.md  spec.md
conductor/tracks/quota-error-codes-20260304/: findings.md  metadata.json  plan.md
conductor/tracks/universal_model_facade_20260226/: plan.md  (+2 more)
examples/: iface_demo.rs
logs/openai/: openai-2026-03-04T15-46-27.059Z-ef2d0ddd.json  openai-2026-03-04T15-46-34.034Z-913fcc5a.json  openai-2026-03-04T15-47-14.644Z-269089b0.json  openai-2026-03-04T15-47-46.030Z-fa27eb37.json  openai-2026-03-04T15-48-04.528Z-dcbadb39.json  openai-2026-03-04T15-49-42.055Z-327ab4ff.json  openai-2026-03-04T15-49-55.315Z-d821a37b.json  openai-2026-03-04T15-50-48.576Z-58368c43.json  openai-2026-03-04T15-51-07.140Z-436ddd12.json  openai-2026-03-04T15-52-12.311Z-1fde699e.json  openai-2026-03-04T15-52-23.094Z-f6c9e54f.json  openai-2026-03-04T15-52-40.854Z-2b1e235f.json  openai-2026-03-04T15-52-51.432Z-7e769cea.json  openai-2026-03-04T15-54-25.057Z-9469192b.json  openai-2026-03-04T15-57-09.490Z-165ac433.json  openai-2026-03-04T15-58-54.768Z-d8ad2063.json  openai-2026-03-04T15-59-17.800Z-4b57dd6a.json  openai-2026-03-04T16-03-23.128Z-b7b7c6ca.json  openai-2026-03-04T16-03-39.620Z-360adeaf.json  openai-2026-03-04T16-03-55.271Z-c1ac2fce.json  openai-2026-03-04T16-04-19.594Z-4d736f6c.json  openai-2026-03-04T16-04-35.539Z-2b2f20b2.json  openai-2026-03-04T16-05-11.175Z-db758263.json  openai-2026-03-04T16-05-17.393Z-3abb4056.json  openai-2026-03-04T16-07-42.944Z-d49a9679.json  openai-2026-03-04T16-08-24.219Z-6b19c3bf.json  openai-2026-03-04T16-08-33.262Z-a5226908.json  openai-2026-03-04T16-21-54.757Z-f63db6b3.json  openai-2026-03-04T16-22-19.777Z-8e17b0dc.json  openai-2026-03-04T16-26-45.292Z-e2355a66.json  openai-2026-03-04T16-27-07.604Z-144d7852.json  openai-2026-03-04T16-27-17.291Z-73111f5f.json  openai-2026-03-04T16-27-39.565Z-0e0abdc5.json  openai-2026-03-04T16-28-14.970Z-b108ba4a.json  openai-2026-03-04T16-28-19.700Z-cec0c4a3.json  openai-2026-03-04T16-28-24.131Z-b49e36ca.json  openai-2026-03-04T16-28-27.402Z-c5b02782.json  openai-2026-03-04T16-28-50.970Z-241ab3bf.json  openai-2026-03-04T16-28-54.084Z-ceb2ba04.json  openai-2026-03-04T16-28-57.391Z-81e7e428.json  (+844 more)
macos/LitebikeControlPlane/: Info.plist
src/: auto_discovery.rs  autovec_optimization.rs  bonjour.rs  combinator_dsl.rs  dsel.rs  fixed_range_constraints.rs  integrated_proxy.rs  jump_table_generation.rs  knox_proxy.rs  lib.rs  main.rs  main.rs.bak  n_dimensional_inference.rs  pac.rs  patricia_detector.rs  posix_sockets.rs  protocol_detector.rs  protocol_handlers.rs  protocol_mocks.rs  protocol_registry.rs  proxy_config.rs  reactor.rs  simple_routing.rs  simple_torture_test.rs  static_generation.rs  syscall_net.rs  taxonomy.rs  tethering_bypass.rs  types.rs  unified_ffi_dispatcher.rs  unified_handler.rs  unified_protocol_manager.rs  universal_listener.rs  upnp.rs  upnp_aggressive.rs
src/agents/: model_hierarchy.rs
src/channel/: mod.rs
src/gates/: cccache_gate.rs  crypto_gate.rs  htx_gate.rs  knox_gate.rs  mod.rs  proxy_gate.rs  shadowsocks_gate.rs
src/intel_console/: dsel.rs  mod.rs
src/io_substrate/: async_io.rs  mod.rs
src/keymux/: cards.rs  dsel.rs  facade.rs  mod.rs  token_ledger.rs  types.rs
src/models/: cache.rs  control.rs  metamodel.rs  mod.rs  proxy.rs  registry.rs  toolbar.rs
src/rbcursive/: mod.rs
tests/: mod.rs
tests/integration/: interface_compatibility.rs  mod.rs
tests/keymux/: mod.rs  test_dsel.rs  test_hierarchical_prefix.rs
tests/modelmux/: mod.rs  test_8888_cloaking.rs
tests/utils/: mod.rs
tools/: build_macos_control_plane_app.sh
(+13 files in other folders)
