[package]
name = "litebike"
version = "0.1.0"
edition = "2021"
authors = ["jnorthrup"]
description = "High-performance proxy with universal protocol detection using Patricia Trie"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jnorthrup/litebike"
keywords = ["proxy", "socks5", "http", "protocol-detection", "networking"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[lib]
name = "litebike"
path = "src/lib.rs"

[[bin]]
name = "litebike"
path = "src/main.rs"

[[bin]]
name = "litebike-proxy"
path = "src/main-termux.rs"

[[bin]]
name = "litebike-simple"
path = "src/main-simple.rs"

[[bin]]
name = "test-patricia"
path = "src/bin/test_patricia.rs"

[[bin]]
name = "test-tls-sni"
path = "src/bin/test_tls_sni.rs"

[[bin]]
name = "mock-protocols"
path = "src/bin/mock_protocols.rs"

[[bin]]
name = "benchmark-simd"
path = "src/bin/benchmark_simd.rs"

[[bin]]
name = "massive-torture-test"
path = "src/bin/massive_torture_test.rs"

[[bin]]
name = "working-torture-test"
path = "src/bin/working_torture_test.rs"

[[bin]]
name = "minimal-torture-test"
path = "src/bin/minimal_torture_test.rs"

[[bin]]
name = "minimal-proxy"
path = "src/bin/minimal_proxy.rs"

[[bin]]
name = "ffi-peek-test"
path = "src/bin/ffi_peek_test.rs"

[[bin]]
name = "simple-ffi-test"
path = "src/bin/simple_ffi_test.rs"

[[bin]]
name = "pure-ffi-test"
path = "src/bin/pure_ffi_test.rs"

[[bin]]
name = "test-swlan0-bind"
path = "src/bin/test_swlan0_bind.rs"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "macros", "sync"] }

# DNS resolution
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# Network interface detection
pnet = { version = "0.35" }

# UPnP port forwarding
igd-next = { version = "0.14" }

# Logging
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["color"] }

# System utilities
hostname = { version = "0.3" }

# Async traits
async-trait = "0.1"

# Static initialization
lazy_static = "1.4"

# Macro utilities for static code generation
paste = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# HTTP parsing
httparse = "1.8"

# Base64 encoding/decoding
base64 = { version = "0.22" }

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# POSIX socket operations
[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }
nix = { version = "0.29", features = ["socket"] }

[features]
default = ["static-generation"]
static-generation = []

[dev-dependencies]
tokio-test = "0.4"



[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"