[package]
name = "litebike"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/jnorthrup/litebike"

[[bin]]
name = "modelmux"
path = "src/bin/modelmux.rs"

[[bin]]
name = "dsel"
path = "src/bin/dsel.rs"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
bytes = "1.0"
parking_lot = "0.12"

# Network
nix = { version = "0.27", features = ["socket"] }
libc = "0.2"
socket2 = "0.6"
rand = "0.8"

# Crypto
chacha20poly1305 = "0.10"
blake3 = "1.5"

# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

# HTTP (for proxy mode)
warp = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Date/time handling
chrono = "0.4"
dirs = "5.0"

# Lazy initialization
once_cell = "1.19"

# Base64 encoding/decoding
base64 = "0.21"

# Regular expressions
regex = "1.10"

[features]
default = []
proxy = ["warp"]

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
